Revert "Update problem_set_2.ipynb"
This reverts commit b8183eb2429f59c4bea2bb4c6c968fbed4bd0239.

--- a/problem_sets/problem_set_2.ipynb
+++ b/problem_sets/problem_set_2.ipynb
@@ -409,7 +409,7 @@
    "source": [
     "Use your function to ansewr the following question:\n",
     "\n",
-    "If you had a monthly discount factor of $r=0.1$, what is the most that you should pay for an asset that pays dividends of: \$1 immediately when purchasing, \$10 after the first month, \$14 after the second month, \$18 after three months, and finally \$100 after six months?\n",
+    "If you had a monthly discount factor of $r=0.1$, what is the most that you should pay for an asset that pays dividends of: $1 immediately when purchasing, $10 after the first month, $14 after the second month, $18 after three months, and finally $100 after six months?\n",
     "\n",
     "*Hint: create a list that contains the returns of your asset, and use it as an input to your function. Remember to change the discount factor.*"
    ]
