--- a/problem_sets/problem_set_2.ipynb
+++ b/problem_sets/problem_set_2.ipynb
@@ -296,8 +296,14 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here (optional)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69824d4a",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -385,7 +391,7 @@
    "source": [
     "## Question 6\n",
     "\n",
-    "Define a function that takes as input a list $y$ *of arbitrary length* that contains the returns of an asset, along with a keyword argument for your discount rate with the default value $r=0.05$, and returns the present daily value of the asset.\n",
+    "Define a function that takes as input a list $y$ *of arbitrary length* that contains the monthly returns of an asset, (where each element in the list represents the returns in that month) along with a keyword argument for your monthly discount rate with the default value $r=0.05$, and returns the present daily value of the asset.\n",
     "\n",
     "*Hint: since you don't know the length of the list $y$, you should check that first.*"
    ]
@@ -407,9 +413,9 @@
    "id": "9a96eb6e",
    "metadata": {},
    "source": [
-    "Use your function to ansewr the following question:\n",
+    "Use your function to answer the following question:\n",
     "\n",
-    "If you had a monthly discount factor of $r=0.1$, what is the most that you should pay for an asset that pays dividends of: $1 immediately when purchasing, $10 after the first month, $14 after the second month, $18 after three months, and finally $100 after six months?\n",
+    "If you had a monthly discount factor of $r=0.1$, what is the most that you should pay for an asset that pays dividends of: \\$1 immediately when purchasing, $10 after the first month, \\$14 after the second month, \\$18 after three months, and finally \\$100 after six months?\n",
     "\n",
     "*Hint: create a list that contains the returns of your asset, and use it as an input to your function. Remember to change the discount factor.*"
    ]
