--- a/Review.ipynb
+++ b/Review.ipynb
@@ -10,7 +10,7 @@
     "- Review material in order learned\n",
     "- Summarize most of what was learned in each section then focus on material that is relatively important or potentially confusing\n",
     "- Not necessarily reflective of what will be covered on the final exam\n",
-    "- There may be errors. Email me know if you see any!\n",
+    "- There may be errors. Email me if you see any!\n",
     "- Borrowed lots of code and some words from QuantEcon Lecture Notes. Attempted to cite heavily-borrowed text using $\\dagger$."
    ]
   },
